--- a/problem/src/main/resources/application.yml
+++ b/problem/src/main/resources/application.yml
@@ -4,11 +4,11 @@ server:
 
 # 数据库配置
 spring:
-#  datasource:
-#    driver-class-name: com.mysql.jdbc.Driver
-#    url: jdbc:mysql://localhost:3306/spvpft
-#    username: root
-#    password: 123456
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/sovpft
+    username: root
+    password: 123456
 
   # Thymeleaf模板的配置
   thymeleaf:
