--- a/problem/src/main/resources/application.yml
+++ b/problem/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 # spring boot端口配置
 server:
-  port: 8080
+  port: 80
 
 # 数据库配置
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/sovpft
+    url: jdbc:mysql://192.3.67.163:3306/HJ_DB?useSSL=false
     username: root
     password: 123456
 
